# clusterfudge-client

./: README.md  bump.py  deploy.py  pyproject.toml  readme.md  setup.cfg  setup.py
.github/workflows/: release.yaml  release.yml
clusterfudge/: __init__.py  __main__.py  cli.py  clusterfudge.py  fudge_client.py  launches_pb2.py  launches_pb2.pyi  launches_pb2_grpc.py  resources_pb2.py  sandboxes.py
clusterfudge_proto/exec/: exec_pb2.py  exec_pb2.pyi  exec_pb2_grpc.py
clusterfudge_proto/fudgelet/: fudgelet_pb2.py  fudgelet_pb2.pyi  fudgelet_pb2_grpc.py
clusterfudge_proto/launches/: launches_pb2.py  launches_pb2.pyi  launches_pb2_grpc.py
clusterfudge_proto/logs/: logs_pb2.py  logs_pb2.pyi  logs_pb2_grpc.py
clusterfudge_proto/pagespb/: pages_pb2.py  pages_pb2.pyi  pages_pb2_grpc.py
clusterfudge_proto/resources/: resources_pb2.py  resources_pb2.pyi  resources_pb2_grpc.py
clusterfudge_proto/sandboxespb/: sandboxes_pb2.py  sandboxes_pb2.pyi  sandboxes_pb2_grpc.py
clusterfudge_proto/slurmpb/: slurm_pb2.py  slurm_pb2.pyi  slurm_pb2_grpc.py
clusterfudge_proto/tunnelpb/: tunnel_pb2.py  tunnel_pb2.pyi  tunnel_pb2_grpc.py
tests/: test_clusterfudge.py  test_sandboxes.py
