[metadata]
name = clusterfudge
author = Clusterfudge
version = 0.38.0
author_email = support@clusterfudge.com
description = Clusterfudge is a supercomputer scheduler
long_description = file: readme.md
long_description_content_type = text/markdown
project_urls = 
	Homepage = https://clusterfudge.com
keywords = clusterfudge, client, infrastructure, hpc, supercomputer, scheduler
classifiers = 
	License :: OSI Approved :: Apache Software License
	Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires = 
	dataclasses-json==0.6.4
	grpcio==1.64.1
	aiohttp==3.9.3
	typer==0.9.0
	protobuf==4.25.3

[options.extras_require]
dev = 
	pytest

[options.entry_points]
console_scripts = 
	clusterfudge = clusterfudge.__main__:main

